# guardian-public

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.peer.yml  docker-compose.yml  middleware.ts  package-lock.json  package.json  proxy.ts  setup.ps1  setup.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/aar/: page.tsx
app/about/: page.tsx
app/admin/: page.tsx
app/ai/: page.tsx
app/api/alert-rules/: route.ts
app/api/doctrine/: route.ts
app/api/health/: route.ts
app/api/incidents/: route.ts
app/api/intel/: route.ts
app/api/manual/: route.ts
app/api/missions/: route.ts
app/api/notifications/: route.ts
app/api/qrf/: route.ts
app/api/rescues/: route.ts
app/api/setup/: route.ts
app/command/: page.tsx
app/doctrine/: page.tsx
app/federation/: layout.tsx  page.tsx
app/fleet/: page.tsx
app/incidents/: page.tsx
app/intel/: page.tsx
app/login/: page.tsx
app/manual/: page.tsx
app/missions/: page.tsx
app/missions/[missionId]/: page.tsx
app/missions/new/: page.tsx
app/notifications/: page.tsx
app/ops/: page.tsx
app/qrf/: page.tsx
app/recruit/: page.tsx
app/rescues/: page.tsx
app/roster/: page.tsx
app/settings/: page.tsx
app/setup/: page.tsx
app/sitrep/: page.tsx
app/standards/: page.tsx
app/tactical/: layout.tsx  page.tsx
components/: admin-dashboard.tsx  admin-member-update-form.tsx  admin-user-create-form.tsx  ai-command-panel.tsx  ai-config-manager.tsx  alert-rule-manager.tsx  alert-toast.tsx  application-manager.tsx  collapsible-panel.tsx  command-timeline.tsx  discord-config-manager.tsx  doctrine-create-form.tsx  factory-reset-panel.tsx  federated-intel-feed.tsx  federation-panel.tsx  fleet-dashboard.tsx  incident-create-form.tsx  incident-update-form.tsx  intel-create-form.tsx  intel-share-button.tsx  intel-update-form.tsx  linked-intel-manager.tsx  live-counters.tsx  manual-center.tsx  mission-closeout-form.tsx  mission-create-form.tsx  mission-doctrine-form.tsx  mission-edit-form.tsx  mission-intel-link-form.tsx  mission-log-form.tsx  mission-quick-actions.tsx  mission-reopen-form.tsx  notification-ack-form.tsx  notification-center.tsx  notification-create-form.tsx  ops-shell.tsx  participant-assign-form.tsx  participant-roster-manager.tsx  profile-settings-form.tsx  public-nav.tsx  (+15 more)
deploy/: promote.sh  pull-guardian-staging.sh  pull-guardian.sh
guardian-engine/: .dockerignore  Cargo.toml  Dockerfile
guardian-engine/comms/: Cargo.toml
guardian-engine/comms/src/: access.rs  channel.rs  crypto.rs  federation.rs  invite.rs  lib.rs  message.rs  participant.rs  routes.rs  types.rs  ws.rs
guardian-engine/migrations/: 20260426000000_initial_schema.sql  20260427000000_comms_tables.sql
guardian-engine/src/: config.rs  db.rs  main.rs  observability.rs  proxy.rs  security.rs  spa.rs  state.rs  tls.rs
guardian-engine/src/ai/: analysis.rs  command.rs  config.rs  mod.rs  prompts.rs  provider.rs
guardian-engine/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  rate_limit.rs  session.rs  totp.rs
guardian-engine/src/compute/: alert_engine.rs  mod.rs  ops_summary.rs  package_discipline.rs  rule_evaluator.rs  threat_correlation.rs
guardian-engine/src/discord/: bot.rs  bridge.rs  commands.rs  mod.rs
guardian-engine/src/federation/: chat.rs  consumer.rs  data_sync.rs  file_transfer.rs  manager.rs  mod.rs  peer.rs  protocol.rs  tls.rs  types.rs
guardian-engine/src/helpers/: audit.rs  mission_templates.rs  mod.rs  notifications.rs  org.rs
guardian-engine/src/routes/: admin.rs  admin_ai_models.rs  ai.rs  auth.rs  command.rs  comms.rs  discord.rs  doctrine.rs  federation.rs  fleet.rs  health.rs  missions.rs  mobile.rs  mod.rs  ollama_scan.rs  ops.rs  recruit.rs  setup.rs  user.rs  views.rs  ws.rs
guardian-spa/: index.html  package-lock.json  package.json  vite.config.ts
guardian-spa/src/: globals.css  main.tsx
guardian-spa/src/components/: admin-dashboard.tsx  admin-member-update-form.tsx  admin-user-create-form.tsx  ai-command-panel.tsx  ai-config-manager.tsx  alert-rule-manager.tsx  alert-toast.tsx  analysis-request-form.tsx  application-manager.tsx  collapsible-card.tsx  collapsible-panel.tsx  command-timeline.tsx  discord-config-manager.tsx  doctrine-create-form.tsx  factory-reset-panel.tsx  federated-intel-feed.tsx  federation-panel.tsx  fleet-dashboard.tsx  incident-create-form.tsx  incident-update-form.tsx  intel-create-form.tsx  intel-form.tsx  intel-req-form.tsx  intel-share-button.tsx  intel-update-form.tsx  linked-intel-manager.tsx  live-counters.tsx  manual-center.tsx  mission-closeout-form.tsx  mission-create-form.tsx  mission-doctrine-form.tsx  mission-edit-form.tsx  mission-intel-link-form.tsx  mission-log-form.tsx  mission-quick-actions.tsx  mission-reopen-form.tsx  notification-center.tsx  notification-create-form.tsx  participant-assign-form.tsx  participant-roster-manager.tsx  (+18 more)
guardian-spa/src/hooks/: use-engine-ws.ts  use-views.ts
guardian-spa/src/lib/: api.ts  auth.tsx  engine-context.tsx  mission-templates.ts  observability.ts  query.ts  roles.ts
guardian-spa/src/pages/: aar.tsx  about.tsx  admin.tsx  ai.tsx  assessments.tsx  command.tsx  comms.tsx  doctrine.tsx  fleet.tsx  (+23 more)
lib/: audit.ts  auth-core.ts  auth.ts  engine-context.tsx  guardian-data.ts  logger.ts  mission-templates.ts  mobile-auth.ts  notifications.ts  ops-data.ts  package-discipline.ts  password-policy.ts  roles.ts  sitrep-data.ts  totp.test.ts  totp.ts  use-engine-ws.ts
prisma/: manual-seed-content.mjs  schema.prisma  seed-ai-models.sql  seed.mjs
prisma/assets/: Guardian_AI_System_Documentation.docx
(+58 files in other folders)
