[package]
name = "guardian-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / WebSocket server
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Federation / networking
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# TLS / Crypto for federation
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"

# HTTP client (AI provider APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async trait support
async-trait = "0.1"

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"
hmac = "0.12"
sha-1 = "0.10"
rand = "0.8"
data-encoding = "2"

# ID generation (cuid-compatible)
cuid2 = "0.1"

[profile.release]
lto = true
strip = true
opt-level = "z"
