[package]
name = "guardian-engine"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / WebSocket server
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }

# Edge proxy: TLS termination + reverse proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
bytes = "1"

# ACME (Let's Encrypt) automatic certificate provisioning
rustls-acme = { version = "0.15", features = ["ring"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Federation / networking
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# TLS / Crypto for federation + edge
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"

# HTTP client (AI provider APIs + reverse proxy)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Async trait support
async-trait = "0.1"

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"
hmac = "0.12"
sha-1 = "0.10"
rand = "0.8"
data-encoding = "2"

# ID generation (cuid-compatible)
cuid2 = "0.1"

# Discord bot
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
