[package]
name = "guardian-comms"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1", features = ["sync", "time", "fs"] }

# Web framework (for WS + REST routes)
axum = { version = "0.8", features = ["ws"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# WebSocket
futures-util = "0.3"

# Concurrent room registry
dashmap = "6"

# Encryption at rest (AES-256-GCM)
aes-gcm = "0.10"
rand = "0.8"

# ID generation
cuid2 = "0.1"

# Error handling
thiserror = "2"
